Case number no longer wraps

--- a/client/src/app/sales/sales.less
+++ b/client/src/app/sales/sales.less
@@ -18,3 +18,7 @@
   }
 
 }
+
+.case {
+  white-space: nowrap;
+}
